Update table headers and remove unnecessary rows

--- a/coa_comparison_web.html
+++ b/coa_comparison_web.html
@@ -306,55 +306,46 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><strong>Suitable (Vhodnost)</strong></td>
+                        <td><strong>Vhodnost - splnění očekávaného zadání</strong></td>
                         <td><span class="star-rating">⭐⭐⭐</span><br>Rychlé, omezené přizpůsobení</td>
                         <td><span class="star-rating">⭐⭐⭐⭐</span><br>100% dle požadavků</td>
                     </tr>
                     <tr>
-                        <td><strong>Feasible (Proveditelnost)</strong></td>
+                        <td><strong>Proveditelnost - zdroje</strong></td>
                         <td><span class="star-rating">⭐⭐⭐⭐</span><br>Nízké nároky, rychlá implementace</td>
                         <td><span class="star-rating">⭐⭐</span><br>Vysoké nároky, dlouhý vývoj</td>
                     </tr>
-                    <tr>
-                        <td><strong>Acceptable (Přijatelnost)</strong></td>
-                        <td><span class="star-rating">⭐⭐⭐</span><br>Závislost na smlouvě</td>
-                        <td><span class="star-rating">⭐⭐⭐⭐</span><br>Plná kontrola</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Security (Bezpečnost)</strong></td>
+                
+                        <td><strong>Bezpečnost/OBI/NBU</strong></td>
                         <td><span class="star-rating">⭐⭐</span><br>Riziko přenosu dat mimo armádu</td>
                         <td><span class="star-rating">⭐⭐⭐⭐</span><br>100% kontrola, OBI optimální</td>
                     </tr>
                     <tr>
-                        <td><strong>Time to Deploy</strong></td>
+                        <td><strong>Rychlost nasazení</strong></td>
                         <td><span class="star-rating">⭐⭐⭐⭐</span><br>Nejrychlejší nasazení</td>
                         <td><span class="star-rating">⭐</span><br>Dlouhá doba vývoje</td>
                     </tr>
                     <tr>
-                        <td><strong>Cost (Počáteční)</strong></td>
+                        <td><strong>Počáteční investice</strong></td>
                         <td><span class="star-rating">⭐⭐</span><br>Nižší vstupní náklady</td>
                         <td><span class="star-rating">⭐⭐⭐⭐</span><br>Vysoká počáteční investice</td>
                     </tr>
                     <tr>
-                        <td><strong>Cost (Dlouhodobé)</strong></td>
+                        <td><strong>Dlouhodobé výdaje</strong></td>
                         <td><span class="star-rating">⭐⭐⭐</span><br>Průběžné licenční poplatky</td>
                         <td><span class="star-rating">⭐⭐⭐⭐</span><br>Levnější provoz dlouhodobě</td>
                     </tr>
                     <tr>
-                        <td><strong>Flexibility (Flexibilita)</strong></td>
+                        <td><strong>Flexibilita</strong></td>
                         <td><span class="star-rating">⭐⭐</span><br>Omezená customizace</td>
                         <td><span class="star-rating">⭐⭐⭐⭐</span><br>Maximální přizpůsobení</td>
                     </tr>
                     <tr>
-                        <td><strong>Vendor-lock</strong></td>
+                        <td><strong>Závislost na dodavateli</strong></td>
                         <td><span class="risk-high">Vysoký</span><br>Závislost na dodavateli</td>
                         <td><span class="risk-low">Nízký</span><br>Plná nezávislost</td>
                     </tr>
-                    <tr>
-                        <td><strong>OBI / NBU Kompatibilita</strong></td>
-                        <td><span class="star-rating">⭐⭐</span><br>Může být problematická</td>
-                        <td><span class="star-rating">⭐⭐⭐⭐</span><br>Optimální pro armádní prostředí</td>
-                    </tr>
+                    
                 </tbody>
             </table>
         </div>
