--- a/coa_comparison_web.html
+++ b/coa_comparison_web.html
@@ -313,27 +313,27 @@
                     <tr>
                         <td><strong>Proveditelnost - zdroje</strong></td>
                         <td><span class="star-rating">⭐⭐⭐⭐</span><br>Nízké nároky, rychlá implementace</td>
-                        <td><span class="star-rating">⭐⭐</span><br>Vysoké nároky, dlouhý vývoj</td>
+                        <td><span class="star-rating">⭐</span><br>Vysoké nároky, dlouhý vývoj</td>
                     </tr>
                 
                         <td><strong>Bezpečnost/OBI/NBU</strong></td>
                         <td><span class="star-rating">⭐⭐</span><br>Riziko přenosu dat mimo armádu</td>
-                        <td><span class="star-rating">⭐⭐⭐⭐</span><br>100% kontrola, OBI optimální</td>
+                        <td><span class="star-rating">⭐⭐⭐</span><br>100% kontrola, OBI optimální</td>
                     </tr>
                     <tr>
                         <td><strong>Rychlost nasazení</strong></td>
-                        <td><span class="star-rating">⭐⭐⭐⭐</span><br>Nejrychlejší nasazení</td>
+                        <td><span class="star-rating">⭐⭐⭐</span><br>Nejrychlejší nasazení</td>
                         <td><span class="star-rating">⭐</span><br>Dlouhá doba vývoje</td>
                     </tr>
                     <tr>
                         <td><strong>Počáteční investice</strong></td>
-                        <td><span class="star-rating">⭐⭐</span><br>Nižší vstupní náklady</td>
-                        <td><span class="star-rating">⭐⭐⭐⭐</span><br>Vysoká počáteční investice</td>
+                        <td><span class="star-rating">⭐⭐⭐</span><br>Nižší vstupní náklady</td>
+                        <td><span class="star-rating">⭐</span><br>Vysoká počáteční investice</td>
                     </tr>
                     <tr>
                         <td><strong>Dlouhodobé výdaje</strong></td>
-                        <td><span class="star-rating">⭐⭐⭐</span><br>Průběžné licenční poplatky</td>
-                        <td><span class="star-rating">⭐⭐⭐⭐</span><br>Levnější provoz dlouhodobě</td>
+                        <td><span class="star-rating">⭐⭐</span><br>Průběžné licenční poplatky</td>
+                        <td><span class="star-rating">⭐⭐⭐</span><br>Levnější provoz dlouhodobě</td>
                     </tr>
                     <tr>
                         <td><strong>Flexibilita</strong></td>
